# specfem3d_globe

./: Makefile  Makefile.in  anisotropic_inner_core_model.f90  attenuation_model.f90  bcast_model.c  check_buffers_1D.f90  check_buffers_2D.f90  check_buffers_corners_chunks.f90  check_buffers_faces_chunks.f90  combine_AVS_DX.f90  compute_coordinates_grid.f90  compute_element_properties.f90  configure  configure.ac  constants.h.in  create_header_file.f90  create_movie_AVS_DX.f90  create_movie_GMT_global.f90  create_regions_mesh.f90  get_model.f90  meshfem3D.f90  model_plugin_support.f90  prem_common.f90  prepare-model.py  read_compute_parameters.f90  run_example.sh  specfem3D.f90  specfem_nproc_per_nex  write_AVS_DX_global_chunks_data.f90
UTILS/seis_process/: Makefile  Makefile.am  README  asc2sac.c  ascii2sac.csh  configure.ac  convolve_stf.c  get_sac_header.c  process_data.pl.in  process_syn.pl.in  rotate.pl  rotate.pl.in
src/auxiliaries/: combine_paraview_strain_data.f90  combine_surf_data.f90  combine_vol_data.F90  create_movie_AVS_DX.f90  create_movie_GMT_global.f90  rules.mk
src/create_header_file/: create_header_file.f90  rules.mk
src/cuda/: prepare_mesh_constants_cuda.cu
src/gpu/: assemble_MPI_scalar_gpu.c  assemble_MPI_vector_gpu.c  check_fields_gpu.c  compute_add_sources_elastic_gpu.c  compute_coupling_gpu.c  compute_forces_crust_mantle_gpu.c  compute_forces_inner_core_gpu.c  compute_forces_outer_core_gpu.c  compute_kernels_gpu.c  compute_stacey_acoustic_gpu.c  compute_stacey_elastic_gpu.c  gpu_buffer_list.c  initialize_gpu.c  mesh_constants_cuda.h  (+11 more)
(+195 files in other folders)
